Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-9002

The sub folders in my documents don't have the appropriate icons

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.0
    • Shell
    • None

    Description

      When the My Documents folder is opened, the Picture, Music and Video folders do not have the right icons. In the shell32 folder, icons 236, 237 and 238 are the icons that should be used instead of just a plain folder icon.

      Attachments

        1. Documents.PNG
          Documents.PNG
          24 kB
        2. ROS desktop_ini.png
          ROS desktop_ini.png
          51 kB
        3. ROS desktop_ini2.png
          ROS desktop_ini2.png
          43 kB
        4. ROS desktop_ini3.png
          ROS desktop_ini3.png
          34 kB
        5. jared-stub.patch
          2 kB
        6. jared-stub.patch
          2 kB
        7. customattributes.patch
          4 kB
        8. folder icons.png
          folder icons.png
          35 kB

        Activity

          People

            gigaherz gigaherz
            Pi_User5 Pi_User5
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: